src/test_files/invalid/i1.vip
int 3x                      # Declaración de variable inválida, pero el programa sigue!!!!
float x = (10.5 + 2.3       # Falta el paréntesis de cierre
